src/sass/myservice-widgets.scss
//
// Styling of feature boxes, mostly on authenticated home page. Each widget must contain a heading with identifying icon.
//

// Container
.widget-mini {
	margin:0 0 3em 0;
	h2 {
		text-align:center;
	}
	div[class^="col-"] {
		margin:3em 0 0 0!important;
		text-align: center;
		margin:auto;
	}
	img {
		width:45%;
		height:45%;
	}
	p {
		font-size:1.1em;
		max-width:300px;
		text-align: center;
		margin:auto;
	}
}
.widget {
  background-color: $white;
  margin-bottom: 1em;
  border: 1px solid $gray-mild;
  margin: 0 0 2em;
  position: relative;

  .widget-header {
    background-color: #ffffff;
	  border-bottom:1px solid #cccccc;
    padding: 0.3em 2em 0 2em;
  }

  .widget-content {
    padding: 2em;

    .status {
      margin-bottom: 1em;
      font-style: italic;
      color: #888888;
    }
  }

  .widget--noclaims {
	text-align:center;
  }

  .widget--justclaims {
    border: 0px solid #cccccc;
    padding: 0em;

    table.table-claims {
      border-left: 0px solid $gray-mild;
      border-right: 0px solid $gray-mild;

      td, th {
        padding: 0.75em 2em 0.75em 2em;
        vertical-align: middle;
        border-bottom: 1px solid $gray-mild;
      }

      tr:last-child td {
        border-bottom: none;
      }

      th {
        color: #888888;
        font-weight: normal;
        font-size: 0.9em;
        padding: 1em 2em 1em 2em;

        &:last-child {
          padding: 1em 2.25em 1em 2em;
        }
      }
    }

    .widget-btn {
      margin: 0 0.5em 2em 2em;
    }
  }

  .col-sm-8 {
    padding-right: 2em;
    padding-bottom: 2em;
  }

  .col-sm-4 {
    padding-left: 2em;
    padding-top: 2em;
  }

  ul {
    margin-bottom: 1em;
  }
}

@media only screen and (min-width: $large-handheld) {
  .widget {  
    .col-sm-4 {
      padding-top: 0;
    }
  }
}

@media only screen and (min-width: $medium-tablet) {
  .widget {
  }

  .widget-btn {
    margin: 0 0.5em 2em 2em;
  }
}

// Claims table on authenticated home page
.table-claims {
  border: 1px solid $gray-mild;
  border-bottom: 0;
  border-radius: 0;

  th {
    background-color: $white;
    font-weight: 500;
  }

  td,
  th {
    border-bottom: 1px solid $gray-mild;
    padding: 0.75em 1em 0.75em 0.75em;
    vertical-align: middle;
  }

  td {
    padding: 0.75em 1em 0.75em 0.75em;
  }

  p {
    margin: 0;
  }

  em {
    color: $gray-mid;
  }

  .activity {
    width: 65%;
  }

  // button {
  //   padding: 0.25em 0.7em 0.4em;
  //   font-size: 0.9rem;
  //   font-weight: normal;
  // }
}

.callout {
  color: $blue;
  font-size: 1.6rem;
  line-height: 1;
  text-align: center;

  span {
    font-size: 1.1rem;
  }
}

.status-icon {
  background-position: -.25em 0;
  background-repeat: no-repeat;
  padding: 0.25em 0.25em 0.25em 40px;

  span {
    font-size: .9rem;
  }

  em {
    color: $gray-mid;
    font-style: normal;
  }
}

.status-icon--table {
  padding: 1.2em 0.5em .75em 60px;
  background-position: 16px 50%;

  &.status-incomplete {
    background-color: $error-background;
  }

  &.status-rejected {
    background-color: $error-background;
  }

  &.status-approved {
    background-color: $success-background;
  }

  &.status-error {
    background-color: $error-background;
  }
}

.status-required {
  background-color: lighten($color: $blue, $amount: 55%);
}

.status-incomplete {
  background-image: url('../images/status-incomplete.svg');
  background-size: 34px 34px;
}

.status-rejected {
  background-image: url('../images/status-rejected.svg');
  background-size: 34px 34px;
}

.status-approved {
  background-image: url('../images/status-approved.svg');
  background-size: 34px 34px;
}

.status-submitted {
  background-image: url('../images/status-submitted.svg');
  background-size: 34px 34px;
}

.status-error {
  background-image: url('../images/status-error.svg');
  background-size: 34px 34px;
}

.add-claims--box {
  text-align: center;
}

@media only screen and (min-width: $large-handheld) {
  .widget {
    min-height: 320px;

    .col-sm-4 {
      padding-top: 0;
    }

    .widget--noclaims {
      // border: 1px solid #cccccc; //I can't see how this is needed. The default has this set already
      padding: 2em 2em 8em; // no need for !important. Its specificity is at the right level now
   
    }
  }
}

@media only screen and (min-width: $medium-tablet) {
  .widget {
    .widget--noclaims {
      // border: 1px solid #cccccc; //I can't see how this is needed. The default has this set already
      padding: 2em 2em 4em; // no need for !important. Its specificity is at the right level now
   
    }
  }
}

@media only screen and (min-width: $medium-handheld) {
  .widget-actions {
    text-align: right;
  }
}

@media screen and (max-width: $medium-handheld) {
  .widget {
    .widget-actions {
      display: flex;

      .uikit-btn {
        flex-grow: 1;

        // margin-left: .5em;
        + .uikit-btn {
          margin-left: .5em;
        }
      }
    }

    .widget-header__title {
      display: block;
      margin-bottom: 1em;
    }
  }
}

@media screen and (max-width: $small-handheld) {
  .widget-header {
    padding: .3em 1em;
  }

  .widget--justclaims {
    .table-claims {
      td {
        padding-left: 1em;
        padding-right: 1em;
      }
    }
  }
}

